--- a/.github/workflows/maven.yml
+++ b/.github/workflows/maven.yml
@@ -24,7 +24,7 @@ jobs:
         run: ls -la
         
       - name: Build and analyze
-        run: mvnw clean package -DskipTests -Dpackaging=native-image
+        run: ./mvnw clean package -DskipTests -Dpackaging=native-image
         
       - uses: actions/upload-artifact@v2
         with:
